--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@ Bookshelf
 		<br>
 	<form method="POST" action="{{url_for('index')}}"class="col-md-5">
         <div class="form-group">
-            <input type="text" class="form-control" name="username" placeholder="username/email" required>
+            <input type="text" class="form-control" name="username" placeholder="username/email" autocomplete="off" required>
         </div>
         <div class="form-group">
             <input type="password" class="form-control" name="password" placeholder="password" required>
