autocomplete is off for search query

--- a/templates/sindex.html
+++ b/templates/sindex.html
@@ -25,7 +25,7 @@ Bookshelf
         <form method="POST" action="{{url_for('query')}}">
         <div class="form-inline my-2 my-lg-0" style="display: inline-block;">
             <div class="form-group">
-                <input type="text" name="query" class="form-control mr-sm-2" placeholder="search" style="float: left;" required>
+                <input type="text" name="query" class="form-control mr-sm-2" placeholder="search" autocomplete="off" style="float: left;" required>
                 <button class="btn btn-primary my-2 my-sm-0">search</button>
             </div>
         </div>
